<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/greyApp">

    <!-- Profile Picture -->
    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_add_photo"
        android:contentDescription="@string/profile_picture" />

    <!-- Change Profile Picture Button -->
    <Button
        android:id="@+id/changeProfilePictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/change_profile_picture" />

    <!-- Username -->
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/username"
        android:textColorHint="@color/light_white"
        android:inputType="text"
        android:maxLines="1" />

    <!-- Bio -->
    <EditText
        android:id="@+id/bioEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/light_white"
        android:hint="@string/bio"
        android:inputType="textMultiLine"
        android:maxLines="5" />

    <!-- Website -->
    <EditText
        android:id="@+id/websiteEditText"
        android:textColorHint="@color/light_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/your_website"
        android:inputType="textUri"

        android:maxLines="3" />
    <EditText
        android:id="@+id/PhoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/light_white"
        android:hint="phone number"
        android:inputType="phone"
        android:maxEms="15"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_a_tutor"
        android:textColor="@color/light_white"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_a_student"
        android:textColor="@color/light_white"/>




    <Button
        android:id="@+id/saveProfileBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save_changes" />

</LinearLayout>
