<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment_chat"
    android:background="@color/black">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="200dp"
            android:src="@drawable/ic_videocall"
            android:background="@color/black"
            android:contentDescription="@string/video_call"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:background="@color/black"
            android:src="@drawable/ic_create"
            android:contentDescription="@string/create_a_chat"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:backgroundTint="@color/greyApp"
        app:cardCornerRadius="20dp"
        android:padding="10dp">



            <!-- Search EditText with Search Icon -->
            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="19dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@android:drawable/ic_menu_search"
                android:drawablePadding="8dp"
                android:drawableTint="#DCFFFFFF"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLength="40"
                android:maxLines="2"
                android:minHeight="48dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                tools:ignore="VisualLintTextFieldSize" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ChatRecycler"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>




    </androidx.cardview.widget.CardView>



</FrameLayout>